[package]
name = "bybit_rs"
version = "0.1.6"
authors = [
    "Omambia Dauglous <omambiadauglous@gmail.com>",
    "NGENI Labs <https://ngeni.io>",
    "Dennis Mwangi <dennismwangidev@gmail.com>",
]
edition = "2018"
rust-version = "1.67"

description = "Fork of the Official Python3 API connector for Bybit's HTTP (bybit) and WebSockets APIs to rust"
documentation = "https://docs.rs/bybit_rs"
readme = "README.md"
homepage = "https://docs.rs/bybit_rs"
license = "MIT"
keywords = ["rust", "bybit_rs", "pybit_rust"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/domambia/bybit_rs"
exclude = ["example_folder"]
[lib]
name = "bybit_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0.56"

#JSON libs
serde_json = "1.0.110"
serde = "1.0.194"
serde_derive = "1.0.194"


#Request
reqwest = { version = "0.11.23", features = [
    "json",
    "default",
    "socks",
    "blocking",
    "stream",
] }
http = "1.0.0"
# encryption
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
regex = "1.10.2"
async-trait = "0.1.77"
openssl = "0.10.62"
url = "2.5.0"
dotenv = "0.15.0"
ring = "0.17.7"
serde_urlencoded = "0.7.1"
once_cell = "1.19.0"
hmac-sha256 = "1.1.7"


[[bin]]
name = "run_test"
path = "example/bybit_test.rs"
